VideoEncoder does not call output callback on FullHD configuration https://bugs.webkit.org/show_bug.cgi?id=258669 rdar://111685821

Reviewed by Eric Carlson.

Extract the profile level id from the codec string for H.264 and send it to GPUProcess for proper initialization.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/http/wpt/webcodecs/videoFrame-colorSpace-expected.txt:
* LayoutTests/http/wpt/webcodecs/videoFrame-colorSpace.html:
* Source/WebKit/WebProcess/GPU/media/RemoteVideoCodecFactory.cpp:
(WebKit::RemoteVideoCodecFactory::createEncoder):

Canonical link: https://commits.webkit.org/265792@main